--- a/app/assets/stylesheets/zipcodes.css.scss
+++ b/app/assets/stylesheets/zipcodes.css.scss
@@ -32,6 +32,9 @@ body {
 		font-weight: bold;
 	}
 
+		.dashboard td{
+			padding: 15px 10px 0 10px;
+		}
 		// .dashboard td:nth-child(1) {
 		// 	width: 100px;
 		// }
